--- a/toolkit/sidechain/domain/Cargo.toml
+++ b/toolkit/sidechain/domain/Cargo.toml
@@ -35,6 +35,8 @@ ed25519-zebra = { workspace = true, optional = true }
 k256 = { workspace = true }
 derive-where = { workspace = true }
 
+schnorr_jubjub = { workspace = true }
+
 [dev-dependencies]
 serde_json = { workspace = true }
 hex-literal = { workspace = true }
