--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,31 +26,19 @@ jobs:
 ### Pre merge workflow ###############################################################################################################
 
   build-linux-x86_64-pre-merge:
-    runs-on: ubuntu-latest
+    runs-on: nixos
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
     outputs:
       sha: ${{ steps.get_sha.outputs.sha }}
     steps:
-      - name: Checkout for Earthfile
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ github.sha }}
-      - name: Checkout code to build
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.sha }}
-          path: ./to-build
       - name: Get current commit SHA
         id: get_sha
-        working-directory: ./to-build
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-      - name: Setup Earthly
-        uses: ./.github/earthly-setup
-        with:
-          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
-          config_tar: ${{ secrets.EARTHLY_TAR }}
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -60,32 +48,57 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
-      - name: Copy Earthfile to build directory
+      - name: cache cargo build
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry/
+            ~/.cargo/git
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      - name: build
+        run: nix develop -c bash -c "cargo build --locked --profile=release"
+      - name: test
+        run: nix develop -c bash -c "cargo test --locked --profile=release --features=runtime-benchmarks"
+      - name: lint
+        run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
+      - name: formatting
+        run: nix develop -c bash -c "cargo fmt --check"
+      #- name: Run cargo-deny to check licenses
+      #  uses: EmbarkStudios/cargo-deny-action@v1
+      #  with:
+      #    command: check licenses
+      - name: build chain specs
         run: |
-          cp Earthfile ./to-build/
-      - name: Run Earthly (build, test, cargo fmt, cargo clippy, publish Docker image)
-        working-directory: ./to-build
-        env:
-          EARTHLY_CI: true
-          EARTHLY_OUTPUT: true
-          EARTHLY_PUSH: true
+            source ./dev/envs/devnet/.envrc
+            target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
+            nix develop -c bash -c "./dev/update-chain-spec.sh devnet_chain_spec.json"
+            source ./dev/envs/ci-preview/.envrc
+            target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > ci_preview_chain_spec.json
+            nix develop -c bash -c "./dev/update-chain-spec.sh ci_preview_chain_spec.json"
+            source ./dev/envs/staging-preview/.envrc
+            target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > staging_preview_chain_spec.json
+            nix develop -c bash -c "./dev/update-chain-spec.sh staging_preview_chain_spec.json"
+      - name: build and push docker image
         run: |
-          earthly -P +ci-pre-merge \
-          --images="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node" \
-          --tags="${{ steps.get_sha.outputs.sha }}"
+          cp target/release/partner-chains-demo-node .
+          nix develop -c bash -c "patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 partner-chains-demo-node"
+          docker build -t ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ steps.get_sha.outputs.sha }} .
+          docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ steps.get_sha.outputs.sha }}
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-artifact
-          path: ./to-build/partner-chains-node-artifact
+          path: ./partner-chains-demo-node
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
           name: chain-specs
           path: |
-            ./to-build/devnet_chain_spec.json
-            ./to-build/ci_preview_chain_spec.json
-            ./to-build/staging_preview_chain_spec.json
+            ./devnet_chain_spec.json
+            ./ci_preview_chain_spec.json
+            ./staging_preview_chain_spec.json
 
   local-env:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
@@ -109,7 +122,6 @@ jobs:
           markers: ${{ matrix.markers }}
         env:
           SUBSTRATE_REPO_SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
-          EARTHLY_TAR: ${{ secrets.EARTHLY_TAR }}
           AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
           AWS_REGION: ${{ env.AWS_REGION }}
           ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
@@ -246,31 +258,21 @@ jobs:
 ### Post merge workflow ###############################################################################################################
 
   build-linux-x86_64-post-merge:
-    runs-on: ubuntu-latest
+    runs-on: nixos
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     outputs:
       sha: ${{ steps.get_sha.outputs.sha }}
     steps:
-      - name: Checkout for Earthfile
+      - name: Checkout master branch code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.sha }}
-      - name: Checkout code to build
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: master
+          ref: ${{ github.sha }} 
           path: ./to-build
       - name: Get current commit SHA
         id: get_sha
         working-directory: ./to-build
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-      - name: Setup Earthly
-        uses: ./.github/earthly-setup
-        with:
-          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
-          config_tar: ${{ secrets.EARTHLY_TAR }}
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -286,24 +288,58 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Copy Earthfile to build directory
-        run: |
-          cp Earthfile ./to-build/
-      - name: Build and Artifacts and Push Image
+      - name: Cache cargo build
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry/
+            ~/.cargo/git
+          key: ${{ runner.os }}-cargo-${{ hashFiles('to-build/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      - name: Build
         working-directory: ./to-build
-        env:
-          EARTHLY_CI: true
-          EARTHLY_OUTPUT: true
-          EARTHLY_PUSH: true
+        run: nix develop -c bash -c "cargo build --locked --profile=release"
+      - name: Build chain specs
+        working-directory: ./to-build
         run: |
-          earthly -P +ci-post-merge \
-          --images="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node ghcr.io/${{ github.repository }}/partner-chains-node-unstable" \
-          --tags="${{ steps.get_sha.outputs.sha }} latest"
+            source ./dev/envs/devnet/.envrc
+            target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
+            nix develop -c bash -c "./dev/update-chain-spec.sh devnet_chain_spec.json"
+            source ./dev/envs/ci-preview/.envrc
+            target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > ci_preview_chain_spec.json
+            nix develop -c bash -c "./dev/update-chain-spec.sh ci_preview_chain_spec.json"
+            source ./dev/envs/staging-preview/.envrc
+            target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > staging_preview_chain_spec.json
+            nix develop -c bash -c "./dev/update-chain-spec.sh staging_preview_chain_spec.json"
+      - name: Build and push docker image
+        working-directory: ./to-build
+        run: |
+          cp target/release/partner-chains-demo-node .
+          nix develop -c bash -c "patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 partner-chains-demo-node"
+
+          docker build -t partner-chains-node:base .
+
+          tags=("${{ steps.get_sha.outputs.sha }}" "latest")
+          images=(
+            "${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node"
+            "ghcr.io/${{ github.repository }}/partner-chains-node-unstable"
+          )
+
+          for tag in "${tags[@]}"; do
+            for image in "${images[@]}"; do 
+              full_tag="$image:$tag"
+              docker tag partner-chains-node:base "$full_tag"
+              docker push "$full_tag"
+            done
+          done
+
       - name: Rename artifact
+        working-directory: ./to-build
         run: |
-          cp ./to-build/partner-chains-node ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
-          chmod +x ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
-          cp ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux partner-chains-node-binary
+          cp ./partner-chains-demo-node partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          chmod +x ./partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          cp ./partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux partner-chains-node-binary
       - name: Copy to binary-host
         uses: ./.github/actions/artifacts/copy-to-binary-host
         with:
@@ -319,15 +355,15 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-linux-artifact
-          path: ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          path: to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
           name: chain-specs
           path: |
-            ./to-build/devnet_chain_spec.json
-            ./to-build/ci_preview_chain_spec.json
-            ./to-build/staging_preview_chain_spec.json
+            to-build/devnet_chain_spec.json
+            to-build/ci_preview_chain_spec.json
+            to-build/staging_preview_chain_spec.json
 
   build-linux-arm64:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
@@ -542,62 +578,116 @@ jobs:
 ### Workflow dispatch flow ###############################################################################################################
 
   build-linux-x86_64-workflow-dispatch:
-    runs-on: ubuntu-latest
+    runs-on: nixos
     if: github.event_name == 'workflow_dispatch'
     steps:
-      - name: Checkout for Earthfile
+      - name: Checkout target code to build
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-          ref: ${{ github.sha }}
-      - name: Checkout code to build
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+          path: to-build
           ref: ${{ inputs.sha }}
-          path: ./to-build
-      - name: Setup Earthly
-        uses: ./.github/earthly-setup
+
+      - name: Overlay flake files from build logic source
+        uses: actions/checkout@v4
         with:
-          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
-          config_tar: ${{ secrets.EARTHLY_TAR }}
+          ref: ${{ github.sha }}
+          sparse-checkout: |
+            flake.nix
+            flake.lock
+          sparse-checkout-cone-mode: false
+
+      - name: Move flake files to to-build
+        shell: bash
+        run: |
+          if [ -f flake.nix ]; then mv flake.nix to-build/flake.nix; fi
+          if [ -f flake.lock ]; then mv flake.lock to-build/flake.lock; fi
+
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
           aws-region: ${{ env.AWS_REGION }}
+
       - name: Login to container registry
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
-      - name: Copy Earthfile to build directory
-        run: |
-          cp Earthfile ./to-build/
-      - name: Build and Artifacts and Push Image
+
+      - name: Cache cargo build
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry/
+            ~/.cargo/git
+          key: ${{ runner.os }}-cargo-${{ hashFiles('to-build/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+
+      - name: Build
         working-directory: ./to-build
-        env:
-          EARTHLY_CI: true
-          EARTHLY_OUTPUT: true
-          EARTHLY_PUSH: true
+        run: nix develop -c bash -c "cargo build --locked --profile=release"
+
+      - name: Test
+        working-directory: ./to-build
+        run: nix develop -c bash -c "cargo test --locked --profile=release --features=runtime-benchmarks"
+
+      - name: Lint
+        working-directory: ./to-build
+        run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
+
+      - name: Formatting
+        working-directory: ./to-build
+        run: nix develop -c bash -c "cargo fmt --check"
+
+      #- name: Run cargo-deny to check licenses
+      #  uses: EmbarkStudios/cargo-deny-action@v1
+      #  with:
+      #    command: check licenses
+      #  working-directory: ./to-build
+
+      - name: Build chain specs
+        working-directory: ./to-build
         run: |
-          earthly -P +ci-workflow-dispatch --images="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node" --tags="${{ inputs.sha }}"
-      - name: Rename artifact
+          source dev/envs/devnet/.envrc
+          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
+          nix develop -c bash -c "./dev/update-chain-spec.sh devnet_chain_spec.json"
+          source dev/envs/ci-preview/.envrc
+          target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > ci_preview_chain_spec.json
+          nix develop -c bash -c "./dev/update-chain-spec.sh ci_preview_chain_spec.json"
+          source dev/envs/staging-preview/.envrc
+          target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > staging_preview_chain_spec.json
+          nix develop -c bash -c "./dev/update-chain-spec.sh staging_preview_chain_spec.json"
+
+      - name: Build and push docker image
+        working-directory: ./to-build
         run: |
-          cp ./to-build/partner-chains-node ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
-          chmod +x ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
+          cp target/release/partner-chains-demo-node .
+          nix develop -c bash -c "patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 partner-chains-demo-node"
+          docker build -t ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ inputs.sha }} .
+          docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ inputs.sha }}
+
+      - name: Rename and prepare artifact for workflow dispatch
+        working-directory: ./to-build
+        run: |
+          ARTIFACT_NAME="partner-chains-node-${{ inputs.sha }}-x86_64-linux"
+          cp ./partner-chains-demo-node "$ARTIFACT_NAME"
+          chmod +x "$ARTIFACT_NAME"
+        shell: bash
+
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-linux-artifact
-          path: ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
+          path: to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
+
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
           name: chain-specs
           path: |
-            ./to-build/devnet_chain_spec.json
-            ./to-build/ci_preview_chain_spec.json
-            ./to-build/staging_preview_chain_spec.json
+            to-build/devnet_chain_spec.json
+            to-build/ci_preview_chain_spec.json
+            to-build/staging_preview_chain_spec.json
 
   build-linux-arm64-workflow-dispatch:
     if: github.event_name == 'workflow_dispatch'
