--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,19 +26,31 @@ jobs:
 ### Pre merge workflow ###############################################################################################################
 
   build-linux-x86_64-pre-merge:
-    runs-on: nixos
+    runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
     outputs:
       sha: ${{ steps.get_sha.outputs.sha }}
     steps:
-      - name: Checkout repository
+      - name: Checkout for Earthfile
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.sha }}
+      - name: Checkout code to build
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.sha }}
+          path: ./to-build
       - name: Get current commit SHA
         id: get_sha
+        working-directory: ./to-build
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+      - name: Setup Earthly
+        uses: ./.github/earthly-setup
+        with:
+          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
+          config_tar: ${{ secrets.EARTHLY_TAR }}
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -48,57 +60,32 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
-      - name: cache cargo build
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry/
-            ~/.cargo/git
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-      - name: build
-        run: nix develop -c bash -c "cargo build --locked --profile=release"
-      - name: test
-        run: nix develop -c bash -c "cargo test --locked --profile=release --features=runtime-benchmarks"
-      - name: lint
-        run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
-      - name: formatting
-        run: nix develop -c bash -c "cargo fmt --check"
-      #- name: Run cargo-deny to check licenses
-      #  uses: EmbarkStudios/cargo-deny-action@v1
-      #  with:
-      #    command: check licenses
-      - name: build chain specs
+      - name: Copy Earthfile to build directory
         run: |
-            source ./dev/envs/devnet/.envrc
-            target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
-            nix develop -c bash -c "./dev/update-chain-spec.sh devnet_chain_spec.json"
-            source ./dev/envs/ci-preview/.envrc
-            target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > ci_preview_chain_spec.json
-            nix develop -c bash -c "./dev/update-chain-spec.sh ci_preview_chain_spec.json"
-            source ./dev/envs/staging-preview/.envrc
-            target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > staging_preview_chain_spec.json
-            nix develop -c bash -c "./dev/update-chain-spec.sh staging_preview_chain_spec.json"
-      - name: build and push docker image
+          cp Earthfile ./to-build/
+      - name: Run Earthly (build, test, cargo fmt, cargo clippy, publish Docker image)
+        working-directory: ./to-build
+        env:
+          EARTHLY_CI: true
+          EARTHLY_OUTPUT: true
+          EARTHLY_PUSH: true
         run: |
-          cp target/release/partner-chains-demo-node .
-          nix develop -c bash -c "patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 partner-chains-demo-node"
-          docker build -t ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ steps.get_sha.outputs.sha }} .
-          docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ steps.get_sha.outputs.sha }}
+          earthly -P +ci-pre-merge \
+          --images="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node" \
+          --tags="${{ steps.get_sha.outputs.sha }}"
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-artifact
-          path: ./partner-chains-demo-node
+          path: ./to-build/partner-chains-node-artifact
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
           name: chain-specs
           path: |
-            ./devnet_chain_spec.json
-            ./ci_preview_chain_spec.json
-            ./staging_preview_chain_spec.json
+            ./to-build/devnet_chain_spec.json
+            ./to-build/ci_preview_chain_spec.json
+            ./to-build/staging_preview_chain_spec.json
 
   local-env:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
@@ -122,6 +109,7 @@ jobs:
           markers: ${{ matrix.markers }}
         env:
           SUBSTRATE_REPO_SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
+          EARTHLY_TAR: ${{ secrets.EARTHLY_TAR }}
           AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
           AWS_REGION: ${{ env.AWS_REGION }}
           ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
@@ -258,21 +246,31 @@ jobs:
 ### Post merge workflow ###############################################################################################################
 
   build-linux-x86_64-post-merge:
-    runs-on: nixos
+    runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     outputs:
       sha: ${{ steps.get_sha.outputs.sha }}
     steps:
-      - name: Checkout master branch code
+      - name: Checkout for Earthfile
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.sha }} 
+          ref: ${{ github.sha }}
+      - name: Checkout code to build
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: master
           path: ./to-build
       - name: Get current commit SHA
         id: get_sha
         working-directory: ./to-build
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+      - name: Setup Earthly
+        uses: ./.github/earthly-setup
+        with:
+          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
+          config_tar: ${{ secrets.EARTHLY_TAR }}
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -288,58 +286,24 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Cache cargo build
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry/
-            ~/.cargo/git
-          key: ${{ runner.os }}-cargo-${{ hashFiles('to-build/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-      - name: Build
-        working-directory: ./to-build
-        run: nix develop -c bash -c "cargo build --locked --profile=release"
-      - name: Build chain specs
-        working-directory: ./to-build
+      - name: Copy Earthfile to build directory
         run: |
-            source ./dev/envs/devnet/.envrc
-            target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
-            nix develop -c bash -c "./dev/update-chain-spec.sh devnet_chain_spec.json"
-            source ./dev/envs/ci-preview/.envrc
-            target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > ci_preview_chain_spec.json
-            nix develop -c bash -c "./dev/update-chain-spec.sh ci_preview_chain_spec.json"
-            source ./dev/envs/staging-preview/.envrc
-            target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > staging_preview_chain_spec.json
-            nix develop -c bash -c "./dev/update-chain-spec.sh staging_preview_chain_spec.json"
-      - name: Build and push docker image
+          cp Earthfile ./to-build/
+      - name: Build and Artifacts and Push Image
         working-directory: ./to-build
+        env:
+          EARTHLY_CI: true
+          EARTHLY_OUTPUT: true
+          EARTHLY_PUSH: true
         run: |
-          cp target/release/partner-chains-demo-node .
-          nix develop -c bash -c "patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 partner-chains-demo-node"
-
-          docker build -t partner-chains-node:base .
-
-          tags=("${{ steps.get_sha.outputs.sha }}" "latest")
-          images=(
-            "${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node"
-            "ghcr.io/${{ github.repository }}/partner-chains-node-unstable"
-          )
-
-          for tag in "${tags[@]}"; do
-            for image in "${images[@]}"; do 
-              full_tag="$image:$tag"
-              docker tag partner-chains-node:base "$full_tag"
-              docker push "$full_tag"
-            done
-          done
-
+          earthly -P +ci-post-merge \
+          --images="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node ghcr.io/${{ github.repository }}/partner-chains-node-unstable" \
+          --tags="${{ steps.get_sha.outputs.sha }} latest"
       - name: Rename artifact
-        working-directory: ./to-build
         run: |
-          cp ./partner-chains-demo-node partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
-          chmod +x ./partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
-          cp ./partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux partner-chains-node-binary
+          cp ./to-build/partner-chains-node ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          chmod +x ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          cp ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux partner-chains-node-binary
       - name: Copy to binary-host
         uses: ./.github/actions/artifacts/copy-to-binary-host
         with:
@@ -355,15 +319,15 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-linux-artifact
-          path: to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          path: ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
           name: chain-specs
           path: |
-            to-build/devnet_chain_spec.json
-            to-build/ci_preview_chain_spec.json
-            to-build/staging_preview_chain_spec.json
+            ./to-build/devnet_chain_spec.json
+            ./to-build/ci_preview_chain_spec.json
+            ./to-build/staging_preview_chain_spec.json
 
   build-linux-arm64:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
@@ -578,116 +542,62 @@ jobs:
 ### Workflow dispatch flow ###############################################################################################################
 
   build-linux-x86_64-workflow-dispatch:
-    runs-on: nixos
+    runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     steps:
-      - name: Checkout target code to build
+      - name: Checkout for Earthfile
         uses: actions/checkout@v4
         with:
-          path: to-build
-          ref: ${{ inputs.sha }}
-
-      - name: Overlay flake files from build logic source
-        uses: actions/checkout@v4
-        with:
+          fetch-depth: 0
           ref: ${{ github.sha }}
-          sparse-checkout: |
-            flake.nix
-            flake.lock
-          sparse-checkout-cone-mode: false
-
-      - name: Move flake files to to-build
-        shell: bash
-        run: |
-          if [ -f flake.nix ]; then mv flake.nix to-build/flake.nix; fi
-          if [ -f flake.lock ]; then mv flake.lock to-build/flake.lock; fi
-
+      - name: Checkout code to build
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ inputs.sha }}
+          path: ./to-build
+      - name: Setup Earthly
+        uses: ./.github/earthly-setup
+        with:
+          ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
+          config_tar: ${{ secrets.EARTHLY_TAR }}
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
           aws-region: ${{ env.AWS_REGION }}
-
       - name: Login to container registry
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
-
-      - name: Cache cargo build
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry/
-            ~/.cargo/git
-          key: ${{ runner.os }}-cargo-${{ hashFiles('to-build/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-
-      - name: Build
-        working-directory: ./to-build
-        run: nix develop -c bash -c "cargo build --locked --profile=release"
-
-      - name: Test
-        working-directory: ./to-build
-        run: nix develop -c bash -c "cargo test --locked --profile=release --features=runtime-benchmarks"
-
-      - name: Lint
-        working-directory: ./to-build
-        run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
-
-      - name: Formatting
-        working-directory: ./to-build
-        run: nix develop -c bash -c "cargo fmt --check"
-
-      #- name: Run cargo-deny to check licenses
-      #  uses: EmbarkStudios/cargo-deny-action@v1
-      #  with:
-      #    command: check licenses
-      #  working-directory: ./to-build
-
-      - name: Build chain specs
-        working-directory: ./to-build
+      - name: Copy Earthfile to build directory
         run: |
-          source dev/envs/devnet/.envrc
-          target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
-          nix develop -c bash -c "./dev/update-chain-spec.sh devnet_chain_spec.json"
-          source dev/envs/ci-preview/.envrc
-          target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > ci_preview_chain_spec.json
-          nix develop -c bash -c "./dev/update-chain-spec.sh ci_preview_chain_spec.json"
-          source dev/envs/staging-preview/.envrc
-          target/release/partner-chains-demo-node build-spec --chain staging --disable-default-bootnode > staging_preview_chain_spec.json
-          nix develop -c bash -c "./dev/update-chain-spec.sh staging_preview_chain_spec.json"
-
-      - name: Build and push docker image
+          cp Earthfile ./to-build/
+      - name: Build and Artifacts and Push Image
         working-directory: ./to-build
+        env:
+          EARTHLY_CI: true
+          EARTHLY_OUTPUT: true
+          EARTHLY_PUSH: true
         run: |
-          cp target/release/partner-chains-demo-node .
-          nix develop -c bash -c "patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 partner-chains-demo-node"
-          docker build -t ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ inputs.sha }} .
-          docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ inputs.sha }}
-
-      - name: Rename and prepare artifact for workflow dispatch
-        working-directory: ./to-build
+          earthly -P +ci-workflow-dispatch --images="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node" --tags="${{ inputs.sha }}"
+      - name: Rename artifact
         run: |
-          ARTIFACT_NAME="partner-chains-node-${{ inputs.sha }}-x86_64-linux"
-          cp ./partner-chains-demo-node "$ARTIFACT_NAME"
-          chmod +x "$ARTIFACT_NAME"
-        shell: bash
-
+          cp ./to-build/partner-chains-node ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
+          chmod +x ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
         with:
           name: partner-chains-node-linux-artifact
-          path: to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
-
+          path: ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
           name: chain-specs
           path: |
-            to-build/devnet_chain_spec.json
-            to-build/ci_preview_chain_spec.json
-            to-build/staging_preview_chain_spec.json
+            ./to-build/devnet_chain_spec.json
+            ./to-build/ci_preview_chain_spec.json
+            ./to-build/staging_preview_chain_spec.json
 
   build-linux-arm64-workflow-dispatch:
     if: github.event_name == 'workflow_dispatch'
