--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ members = [
 	"toolkit/utils/db-sync-sqlx",
 	"toolkit/governed-map/primitives",
 	"toolkit/governed-map/pallet",
+	"e2e",
 ]
 resolver = "2"
 
@@ -184,6 +185,7 @@ sqlx = { version = "0.8.5", default-features = false, features = [
 ] }
 derive-where = { version = "1.2.7", default-features = false }
 once_cell = { version = "1.21.3", default-features = false }
+uuid = { version = "1.16.0", default-features = false }
 
 # substrate dependencies
 frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-5" }
