--- a/demo/runtime/Cargo.toml
+++ b/demo/runtime/Cargo.toml
@@ -32,7 +32,7 @@ pallet-grandpa = { workspace = true }
 pallet-partner-chains-session = { workspace = true, features = [
 	"pallet-session-compat",
 ] }
-pallet-session = { workspace = true }
+pallet-session = { workspace = true, features = ["historical"] }
 pallet-sudo = { workspace = true }
 frame-system = { workspace = true }
 frame-try-runtime = { workspace = true, optional = true }
@@ -75,9 +75,7 @@ sp-block-production-log = { workspace = true }
 pallet-block-production-log = { workspace = true }
 sp-sidechain = { workspace = true }
 pallet-sidechain = { workspace = true }
-pallet-session-validator-management = { workspace = true, features = [
-	"pallet-session-compat",
-] }
+pallet-session-validator-management = { workspace = true }
 sp-session-validator-management = { workspace = true, features = ["serde"] }
 pallet-session-validator-management-benchmarking = { workspace = true, optional = true }
 sidechain-domain = { workspace = true, features = ["serde"] }
