--- a/toolkit/partner-chains-cli/Cargo.toml
+++ b/toolkit/partner-chains-cli/Cargo.toml
@@ -42,11 +42,12 @@ sp-session-validator-management = { workspace = true, features = ["std"] }
 pallet-session-validator-management = { workspace = true, features = ["std"] }
 pallet-partner-chains-bridge = { workspace = true, features = ["std"] }
 sp-partner-chains-bridge = { workspace = true, features = ["std"] }
-pallet-partner-chains-session = { workspace = true, features = ["std"] }
+pallet-session = { workspace = true, features = ["std"] }
 pallet-sidechain = { workspace = true, features = ["std"] }
 pallet-governed-map = { workspace = true, features = ["std"] }
 sp-governed-map = { workspace = true, features = ["std"] }
 sidechain-slots = { workspace = true }
+sp-staking = { workspace = true }
 authority-selection-inherents = { workspace = true, features = ["std"] }
 
 [dev-dependencies]
@@ -62,4 +63,7 @@ sp-runtime = { workspace = true }
 [features]
 default = ["std"]
 std = []
-runtime-benchmarks = []
+runtime-benchmarks = [
+    "pallet-partner-chains-bridge/runtime-benchmarks",
+    "pallet-governed-map/runtime-benchmarks",
+]
