--- a/toolkit/smart-contracts/plutus-data/Cargo.toml
+++ b/toolkit/smart-contracts/plutus-data/Cargo.toml
@@ -21,5 +21,6 @@ thiserror = { workspace = true }
 [dev-dependencies]
 raw-scripts = { workspace = true }
 serde_json = { workspace = true }
+hex = { workspace = true }
 hex-literal = { workspace = true }
 pretty_assertions = { workspace = true }
